[package]
name = "rend"
version = "0.3.6"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Endian-aware primitives for Rust"
license = "MIT"
documentation = "https://docs.rs/rend"
repository = "https://github.com/djkoloski/rend"
keywords = ["endian", "no_std"]
categories = ["encoding", "no-std"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { git = "https://github.com/cpunkzzz/bytecheck.git", rev= "666ee6da75341572267f90f530a177a53950de92", optional = true, default-features = false }

[features]
default = ["std"]
std = ["bytecheck/std"]
validation = ["bytecheck"]
