[package]
name = "rend"
version = "0.3.6"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Endian-aware primitives for Rust"
license = "MIT"
documentation = "https://docs.rs/rend"
repository = "https://github.com/djkoloski/rend"
keywords = ["endian", "no_std"]
categories = ["encoding", "no-std"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { git = "https://github.com/cpunkzzz/bytecheck.git", rev= "b3cd049b38572fb9e9d6a0c0a08704457af884d4", optional = true, default-features = false }

[features]
default = ["std"]
std = ["bytecheck/std"]
validation = ["bytecheck"]
